--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 h1 {
 
-color: red;
+color: rgb(0, 255, 38);
 
 }
 
 body { 
-    background-color: aquamarine;
+    background-color: rgb(237, 49, 187);
 }
